Added xss protection

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
+    "express-rate-limit": "^5.0.0",
     "weatherapi": "https://github.com/kfaubel/weatherImage.git",
-    "weatherimage": "git+https://github.com/kfaubel/weatherImage.git"
+    "weatherimage": "git+https://github.com/kfaubel/weatherImage.git",
+    "xss-clean": "^0.1.1"
   }
 }
